--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Be on time</title>
+    <title>Your Time</title>
 </head>
 <body>
     <h1>World Clock</h1>
 
     <footer>
-        This project was coded by <a href="#" target="_blank">Camilla Cardoso</a> and is open sourced on <a href="#" target="_blank">GitHub</a>.
+        This project was coded by <a href="https://www.linkedin.com/in/camillascardoso/" target="_blank">Camilla Cardoso</a> and is open sourced on <a href="https://github.com/hicamilla/World-Clock-Add-On-W2.git" target="_blank">GitHub</a> and hosted on <a href="https://ultimateworldtime.netlify.app" target="_blank">Netlify</a>.
     </footer>
     <script src="index.js"></script>
 </body>
