--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
     <title>Your Time</title>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+    
+    <select>
+        <option value="">Select a city</option>
+        <option value=""> 🏴󠁧󠁢󠁥󠁮󠁧󠁿 London</option>
+        <option value=""> 🇵🇹 Lisbon</option>
+        <option value=""> 🇧🇷 São Paulo</option>
+        <option value=""> 🇩🇪 Düsseldorf</option>
+        <option value=""> 🇦🇺 Sydney</option>
+        <option value=""> 🇪🇸 Madrid</option>
+        <option value=""> 🇺🇸 New York</option>
+        <option value=""> 🇳🇱 Amsterdam</option>
+    </select>
+    <div class="cities">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">17:15:15 PM</div>       
+    </div>
+    <div class="cities">
+        <h2>Lisbon</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">12:15:15 PM</div>
+    </div>
+    </div>
 
     <footer>
         This project was coded by <a href="https://www.linkedin.com/in/camillascardoso/" target="_blank">Camilla Cardoso</a> and is open sourced on <a href="https://github.com/hicamilla/World-Clock-Add-On-W2.git" target="_blank">GitHub</a> and hosted on <a href="https://ultimateworldtime.netlify.app" target="_blank">Netlify</a>.
