--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
         <option value=""> 🇳🇱 Amsterdam</option>
     </select>
     <div class="cities">
-        <h2>Los Angeles</h2>
+        <h2>New York</h2>
         <div class="date">August 15th 2024</div>
         <div class="time">17:15:15 PM</div>       
     </div>
     <div class="cities">
         <h2>Lisbon</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">12:15:15 PM</div>
+    </div>
+    <div class="cities">
+        <h2>Madrid</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">17:15:15 PM</div>
+    </div>
+    <div class="cities">
+        <h2>Düsseldorf</h2>
         <div class="date">August 15th 2024</div>
         <div class="time">12:15:15 PM</div>
     </div>
