input-js-timezone

--- a/index.html
+++ b/index.html
@@ -27,41 +27,37 @@
         <option value="">Amsterdam 🇳🇱</option>
     </select>
     
-        <div class="city">
+        <div class="city" id="newyork">
             <div>
                 <h2>New York</h2>
-                <div class="date">August 15th 2024</div>
+                <div class="date"></div>
             </div>
-            <div class="time">17:15:15 <small>PM</small></div>
+            <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="saopaulo">
             <div>
                 <h2>São Paulo</h2>
-                <div class="date">August 15th 2024</div>
+                <div class="date"></div>
             </div>
-            <div class="time">17:15:15 <small>PM</small></div>
+            <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="porto">
             <div>
                 <h2>Porto</h2>
-                <div class="date">August 15th 2024</div>
+                <div class="date"></div>
             </div>
-            <div class="time">17:15:15 <small>PM</small></div>
+            <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="dusseldorf">
             <div>
                 <h2>Düsseldorf</h2>
-                <div class="date">August 15th 2024</div>
+                <div class="date"></div>
             </div>
-            <div class="time">17:15:15 <small>PM</small></div>
+            <div class="time"></div>
         </div>
-
-
-
-
 
 
     </div>
