--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <select id="city">
         <option value="">Select a city</option>
+        <option value="current">Current timezone</option>
         <option value="Europe/Lisbon">Lisbon 🇵🇹</option>
         <option value="America/Sao_Paulo">São Paulo 🇧🇷</option>
         <option value="Europe/Berlin">Düsseldorf 🇩🇪</option>
@@ -30,7 +31,6 @@
     </select>
 
     <div id="cities"> 
-
         <div class="city" id="saopaulo">
             <div>
                 <h2>Sao Paulo</h2>
