--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
-    <link rel="stylesheet" href="style.css"></head>
+    <link rel="stylesheet" href="src/style.css"></head>
     <title>Your Time</title>
 </head>
 <body>
@@ -74,6 +74,6 @@
             and hosted on <a href="https://ultimateworldtime.netlify.app" target="_blank">Netlify</a>.
     </footer>
     
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
