--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="src/style.css"></head>
-    <title>Your Time</title>
+    <title>Worldtimers</title>
 </head>
 <body>
      <div class="container">
@@ -31,6 +31,12 @@
         <option value="Europe/Madrid">Madrid 🇪🇸</option>
         <option value="America/New_York">New York 🇺🇸</option>
         <option value="Europe/Amsterdam">Amsterdam 🇳🇱</option>
+        <option value="Europe/Rome">Rome 🇷🇴</option>
+        <option value="America/Bahia">Bahia 🇧🇷</option>
+        <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+        <option value="Atlantic/Reykjavik">Reykjavik 🇮🇸</option>
+        <option value="Pacific/Fiji">Fiji 🇫🇯</option>
+
     </select>
 
     <div id="cities"> 
